src/snapshots/blog__snapshot@inside-rust__2024__02__13__leadership-council-update.html.snap
---
source: src/lib.rs
expression: content
input_file: site/inside-rust/2024/02/13/leadership-council-update.html
snapshot_kind: text
---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>February 2024 Leadership Council Update | Inside Rust Blog</title>
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
<meta name="description" content="Empowering everyone to build reliable and efficient software.">
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@rustlang">
     <meta name="twitter:creator" content="@rustlang">
     <meta name="twitter:title" content="February 2024 Leadership Council Update | Inside Rust Blog">
     <meta name="twitter:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta name="twitter:image" content="https://www.rust-lang.org/static/images/rust-social.jpg">
    
    <!-- Facebook OpenGraph -->
    <meta property="og:title" content="February 2024 Leadership Council Update | Inside Rust Blog" />
    <meta property="og:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta property="og:image" content="https://www.rust-lang.org/static/images/rust-social-wide.jpg" />
    <meta property="og:type" content="website" />
    <meta property="og:locale" content="en_US" />
    
    <!-- styles -->
    <link rel="stylesheet" href="../../../../styles/vendor.css"/>
    <link rel="stylesheet" href="../../../../styles/fonts.css"/>
    <link rel="stylesheet" href="../../../../styles/app.css"/>
    <link rel="stylesheet" href="../../../../styles/highlight.css"/>
    
    <!-- stylesheet for user agents without js -->
    <noscript>
        <link rel="stylesheet" href="../../../../styles/noscript.css">
    </noscript>
    
    <!-- favicon -->
    <link rel="apple-touch-icon" sizes="180x180" href="../../../../images/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="16x16" href="../../../../images/favicon-16x16.png">
    <link rel="icon" type="image/png" sizes="32x32" href="../../../../images/favicon-32x32.png">
    <link rel="icon" type="image/svg+xml" href="../../../../images/favicon.svg">
    <link rel="manifest" href="../../../../images/site.webmanifest">
    <link rel="mask-icon" href="../../../../images/safari-pinned-tab.svg" color="#5bbad5">
    <meta name="msapplication-TileColor" content="#00aba9">
    <meta name="theme-color" content="#ffffff">
    
     <!-- atom -->
     <link type="application/atom+xml" rel="alternate" href="https://blog.rust-lang.org/inside-rust/feed.xml" title="Inside Rust Blog" />
    
    <!-- theme switcher -->
    <script src="../../../../scripts/theme-switch.js"></script>
  </head>
  <body>
    <nav class="flex flex-row justify-center justify-end-l items-center flex-wrap ph2 pl3-ns pr4-ns">
      <div class="brand flex-auto w-100 w-auto-l self-start tc tl-l">
        <a href="../../../../inside-rust/">
          <img class="v-mid ml0-l rust-logo" alt="Rust Logo" src="../../../../images/rust-logo-blk.svg">
          <span class="dib ml1 ml0-l">Inside Rust Blog</span>
        </a>
      </div>
    
      <ul class="nav list w-100 w-auto-l flex flex-none flex-row flex-wrap justify-center justify-end-l items-center pv2 ph0 ph4-ns">
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org">Rust</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools/install">Install</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/learn">Learn</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools">Tools</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/governance">Governance</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/community">Community</a></li>
        <button class="theme-icon" onclick="dropdown();">🖌
          <ul id="theme-choice">
            <li class="theme-item" onclick="changeThemeTo('light');">Light</li>
            <li class="theme-item" onclick="changeThemeTo('dark');">Dark</li>
            <li class="theme-item" onclick="changeThemeTo('system');">System</li>
          </ul>
        </button>
        <script src="../../../../scripts/theme-switch-post.js"></script>
      </ul>
    </nav>
<section id="February 2024 Leadership Council Update" class="white">
  <div class="w-100 mw-none ph3 mw8-m mw8-l center f3">
    <header>
      <h2>February 2024 Leadership Council Update</h2>
      <div class="highlight mt2 mb3"></div>
    </header>

    <div class="publish-date-author">Feb. 13, 2024 &middot; Leadership Council
     on behalf of <a href="https://www.rust-lang.org/governance/teams/leadership-council">Leadership Council</a> 
    </div>

    <div class="post">
      <p>Hello again from the Rust Leadership Council!
We wanted to share an update on what the Council has been working on since <a href="https://blog.rust-lang.org/inside-rust/2023/11/13/leadership-council-update.html">our last update</a>.</p>
<h2><a href="#accomplishments-so-far" aria-hidden="true" class="anchor" id="accomplishments-so-far"></a>Accomplishments so far</h2>
<h3><a href="#project-structure" aria-hidden="true" class="anchor" id="project-structure"></a>Project Structure</h3>
<p>The Council has agreed to make the <a href="https://www.rust-lang.org/governance/teams/infra#Release%20team">Release team</a> a subteam of the <a href="https://www.rust-lang.org/governance/teams/infra">Infra team</a> in <a href="https://rust-lang.github.io/rfcs/3533-combine-infra-and-release-teams.html">RFC #3533</a>.
<a href="https://github.com/rylev">Ryan Levick</a> has stepped off the Council as part of this transition, and we thank him for the very significant help he has provided.
Ryan has been a part of the Core team since 2021, and was part of the group that designed and created the Leadership Council, and has earned a well deserved break.</p>
<p>We created the <a href="https://github.com/rust-lang/leadership-council/blob/main/committees/project-structure.md">Project Structure Committee</a> to help drive the discussion about the &quot;shape&quot; of the Rust project, and to define the goals and responsibilities of that committee.
There is not much progress to report at this time, as the group is still trying to get a grasp on how to approach it.
In the meantime, <a href="https://github.com/ehuss">Eric Huss</a> created a <a href="https://ehuss.github.io/org-chart/org-chart.html">org visualizer</a> to visually see the entire scope of the project.</p>
<p>There is an <a href="https://hackmd.io/@rust-leadership-council/Bk6ge9Xu6">untracked people</a> document where we are exploring people in the project who are in an ambiguous state, or not properly tracked in the team database.
Additionally, <a href="https://github.com/kobzol">Jakub Beránek</a> has done fantastic work in updating the team database to make sure all repositories are tracked and tied to teams correctly, submitting well over <a href="https://github.com/rust-lang/team/pulls?q=is%3Apr+is%3Aclosed">100 PRs</a>, and improving the infrastructure that manages the teams.</p>
<p>There is a <a href="https://github.com/rust-lang/rust-forge/pull/707">new policy</a> for management of the <a href="https://github.com/rust-lang/team">Rust Team Database</a>, which records the list of all teams, members, repositories, and their permissions.
Additionally, the <a href="https://github.com/rust-lang/team/blob/master/teams/team-repo-admins.toml">team-repo-admins</a> (<a href="https://github.com/Mark-Simulacrum">Mark-Simulacrum</a>, <a href="https://github.com/rylev">Ryan Levick</a>, and <a href="https://github.com/jackh726">Jack Huey</a>) are a group of people responsible for approving changes to the team database under that policy.</p>
<h3><a href="#wrapping-up-project-director-elections" aria-hidden="true" class="anchor" id="wrapping-up-project-director-elections"></a>Wrapping up Project Director Elections</h3>
<p><a href="https://github.com/eholk">Eric Holk</a> created a <a href="https://github.com/rust-lang/leadership-council/blob/main/reports/project-director-elections/2023-project-director-elections-retrospective.md">retrospective of the Project Director elections</a>.
This gathers the lessons we learned during the process in October and ideas to improve the process in the future.
We have agreed to hold the next Foundation Project Director election in September 2024 for the two seats of Ryan Levick and Mark Rousskov, which we hope will run more smoothly based on this review.</p>
<h3><a href="#google-summer-of-code" aria-hidden="true" class="anchor" id="google-summer-of-code"></a>Google Summer of Code</h3>
<p>We agreed that the project should explore the possibility of participating in <a href="https://summerofcode.withgoogle.com/">Google Summer of Code</a>, thanks to the efforts of <a href="https://github.com/kobzol">Jakub Beránek</a> and <a href="https://github.com/jackh726">Jack Huey</a>, along with the Foundation agreeing to help with submitting the application.
Proposals and coordination are happening in the <a href="https://github.com/rust-lang/google-summer-of-code">google-summer-of-code repo</a>.
More information about this will be shared in the future if our application is approved.</p>
<h3><a href="#leads-summit" aria-hidden="true" class="anchor" id="leads-summit"></a>Leads Summit</h3>
<p>We agreed to have a Leads Summit in London, UK just before RustNation in March.
This is an opportunity for project leads to meet in person, to discuss project-wide goals, and to develop leadership skills.</p>
<h3><a href="#council-representative-appointments" aria-hidden="true" class="anchor" id="council-representative-appointments"></a>Council Representative Appointments</h3>
<p>We have agreed that the next Council Representative appointments will happen in March.
We are in the process of finalizing which half of teams will be going through the appointment process, and will follow up soon with more details.</p>
<h3><a href="#additional-items" aria-hidden="true" class="anchor" id="additional-items"></a>Additional Items</h3>
<p>And a few minor items:</p>
<ul>
<li>Approved TWiR to be added to the <a href="https://social.rust-lang.org/">https://social.rust-lang.org/</a> Mastodon service. The infra team is working on getting this finalized.</li>
<li>The <a href="https://github.com/rust-lang/rfcs/pull/3549">RustConf Steering Committee RFC</a> had various discussions among the Council, but it was ultimately closed by the author to reconsider how this will be approached in the future.</li>
<li><a href="https://github.com/rust-lang/leadership-council/issues/22">issue #22</a>: The Council formally adopted the T-core RFCs (<a href="https://github.com/rust-lang/rfcs/pull/2872">RFC#2872</a> <a href="https://github.com/rust-lang/rfcs/pull/3259">RFC#3259</a> <a href="https://github.com/rust-lang/rfcs/pull/3339">RFC#3339</a>), and has begun work to move those forward.</li>
<li><a href="https://github.com/rust-lang/leadership-council/issues/60">issue #60</a>: The Council approved a policy for handling <a href="https://github.com/rust-lang/leadership-council/blob/main/procedures/synchronous-meetings.md#private-minutes">private meeting minutes</a>.</li>
<li>Permissions for the <a href="https://forge.rust-lang.org/">Rust Forge</a> are now formally written down (<a href="https://github.com/rust-lang/rust-forge/pull/725">PR #725</a>), indicating that the infra team is responsible for it, and any Rust team, working group, or project group may post their content on it.</li>
<li>Thanks to <a href="https://github.com/dtolnay">David Tolnay</a>, the team representation of the Council is now displayed on the <a href="https://www.rust-lang.org/governance/teams/leadership-council">website</a>.</li>
</ul>
<h2><a href="#ongoing-work" aria-hidden="true" class="anchor" id="ongoing-work"></a>Ongoing work</h2>
<p>There are various efforts underway on projects that have had significant discussions since the last update, but have not concluded with any decisions, yet.
They are:</p>
<ul>
<li>Planning around the Foundation's upcoming budget.</li>
<li>Investigation and discussions around the Rust trademarks, and what if any policy changes we should enact.</li>
<li>Work on defining and clarifying affiliation limits and the substitute policy, for both the Foundation Project Directors (<a href="https://github.com/rust-lang/leadership-council/pull/61">PR #61</a>) and the Council itself (<a href="https://github.com/rust-lang/leadership-council/issues/27">issue #27</a>).
There is a <a href="https://hackmd.io/@rust-leadership-council/BJMOxfP5p">work in progress</a> exploring this.</li>
<li>Investigating process for managing external requests for the council via ZenDesk.</li>
</ul>
<h2><a href="#meeting-minutes" aria-hidden="true" class="anchor" id="meeting-minutes"></a>Meeting Minutes</h2>
<p>We publish minutes from all Council meetings to the <a href="https://github.com/rust-lang/leadership-council/tree/main/minutes">Leadership Council repo</a>.
Links to the minutes since our last update are:</p>
<ul>
<li><a href="https://github.com/rust-lang/leadership-council/blob/main/minutes/sync-meeting/2023-11-10.md">November 10, 2023</a></li>
<li><a href="https://github.com/rust-lang/leadership-council/blob/main/minutes/sync-meeting/2023-12-08.md">December 8, 2023</a></li>
<li><a href="https://github.com/rust-lang/leadership-council/blob/main/minutes/sync-meeting/2024-01-05.md">January 5, 2024</a></li>
<li><a href="https://github.com/rust-lang/leadership-council/blob/main/minutes/sync-meeting/2024-01-19.md">January 19, 2024</a></li>
</ul>

    </div>
  </div>
</section>
    <footer>
      <div class="w-100 mw-none ph3 mw8-m mw9-l center f3">
        <div class="row">
          <div class="four columns mt3 mt0-l" id="get-help">
            <h4>Get help!</h4>
            <ul>
              <li><a href="https://doc.rust-lang.org" target="_blank" rel="noopener">Documentation</a></li>
              <li><a href="mailto:core-team@rust-lang.org">Contact the Rust Team</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Terms and policies</h4>
            <ul>
              <li><a href="https://www.rust-lang.org/policies/code-of-conduct">Code of Conduct</a></li>
              <li><a href="https://www.rust-lang.org/policies/licenses">Licenses</a></li>
              <li><a href="https://www.rust-lang.org/policies/media-guide">Logo Policy and Media Guide</a></li>
              <li><a href="https://www.rust-lang.org/policies/security">Security Disclosures</a></li>
              <li><a href="https://www.rust-lang.org/policies">All Policies</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Social</h4>
            <div class="flex flex-row flex-wrap">
              <a rel="me" href="https://social.rust-lang.org/@rust" target="_blank" rel="noopener" alt="mastodon link"><img src="../../../../images/mastodon.svg" alt="mastodon logo" title="Mastodon"/></a>
              <a href="https://twitter.com/rustlang" target="_blank" rel="noopener" alt="twitter link"><img src="../../../../images/twitter.svg" alt="twitter logo" title="Twitter"/></a>
              <a href="https://www.youtube.com/channel/UCaYhcUwRBNscFNUKTjgPFiA" target="_blank" rel="noopener" alt="youtube link"><img style="padding-top: 6px; padding-bottom:6px" src="../../../../images/youtube.svg" alt="youtube logo" title="YouTube"/></a>
              <a href="https://discord.gg/rust-lang" target="_blank" rel="noopener" alt="discord link"><img src="../../../../images/discord.svg" alt="discord logo" title="Discord"/></a>
              <a href="https://github.com/rust-lang" target="_blank" rel="noopener" alt="github link"><img src="../../../../images/github.svg" alt="github logo" title="GitHub"/></a>
            </div>
            <h4 class="mt4 mb3">RSS</h4>
            <ul>
              <li><a href="../../../../feed.xml">Main Blog</a></li>
              <li><a href="../../../../inside-rust/feed.xml">"Inside Rust" Blog</a></li>
            </ul>
          </div>
    
        </div>
        <div class="attribution">
          Maintained by the Rust Team. See a typo?
          <a href="https://github.com/rust-lang/blog.rust-lang.org" target="_blank" rel="noopener">Send a fix here</a>!
        </div>
      </div>
    </footer>
    
    <!-- scripts -->
    <script src="../../../../scripts/highlight.js"></script>
  </body>
</html>
